// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dive list: Snapshots tests Dive table: should render correctly 1`] = `
<table
  className="MuiTable-root-33 sc-bwzfXH fGCCLo"
>
  <thead
    className="MuiTableHead-root-34"
  >
    <tr
      className="MuiTableRow-root-35 MuiTableRow-head-38"
    >
      <th
        aria-sort={null}
        className="MuiTableCell-root-40 MuiTableCell-head-41"
        scope="col"
      >
        <span
          className="MuiButtonBase-root-17 MuiIconButton-root-57 MuiSwitchBase-root-53 MuiCheckbox-root-48 MuiCheckbox-colorSecondary-52"
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={null}
        >
          <span
            className="MuiIconButton-label-62"
          >
            <svg
              aria-hidden="true"
              className="MuiSvgIcon-root-20"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
              />
            </svg>
            <input
              checked={false}
              className="MuiSwitchBase-input-56"
              onChange={[Function]}
              type="checkbox"
            />
          </span>
          <span
            className="MuiTouchRipple-root-26"
          />
        </span>
      </th>
      <th
        aria-sort={null}
        className="MuiTableCell-root-40 MuiTableCell-head-41"
        scope="col"
      >
        Name
      </th>
      <th
        aria-sort={null}
        className="MuiTableCell-root-40 MuiTableCell-head-41"
        scope="col"
      >
        Country
      </th>
      <th
        aria-sort={null}
        className="MuiTableCell-root-40 MuiTableCell-head-41"
        scope="col"
      >
        Date
      </th>
    </tr>
  </thead>
  <tbody
    className="MuiTableBody-root-63"
  >
    <tr
      aria-checked={false}
      className="MuiTableRow-root-35"
      role="checkbox"
      tabIndex={-1}
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root-40 MuiTableCell-body-42"
      >
        <span
          className="MuiButtonBase-root-17 MuiIconButton-root-57 MuiSwitchBase-root-53 MuiCheckbox-root-48 MuiCheckbox-colorSecondary-52"
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={null}
        >
          <span
            className="MuiIconButton-label-62"
          >
            <svg
              aria-hidden="true"
              className="MuiSvgIcon-root-20"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
              />
            </svg>
            <input
              checked={false}
              className="MuiSwitchBase-input-56"
              onChange={[Function]}
              type="checkbox"
              value="test1"
            />
          </span>
          <span
            className="MuiTouchRipple-root-26"
          />
        </span>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-40 MuiTableCell-body-42"
      >
        <a
          href="/list/edit/test1"
          onClick={[Function]}
        >
          kaotao OW/AOW lesson
        </a>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-40 MuiTableCell-body-42"
      >
        Thailand
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-40 MuiTableCell-body-42"
      >
        2017-03-15
      </td>
    </tr>
    <tr
      aria-checked={false}
      className="MuiTableRow-root-35"
      role="checkbox"
      tabIndex={-1}
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root-40 MuiTableCell-body-42"
      >
        <span
          className="MuiButtonBase-root-17 MuiIconButton-root-57 MuiSwitchBase-root-53 MuiCheckbox-root-48 MuiCheckbox-colorSecondary-52"
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={null}
        >
          <span
            className="MuiIconButton-label-62"
          >
            <svg
              aria-hidden="true"
              className="MuiSvgIcon-root-20"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
              />
            </svg>
            <input
              checked={false}
              className="MuiSwitchBase-input-56"
              onChange={[Function]}
              type="checkbox"
              value="test2"
            />
          </span>
          <span
            className="MuiTouchRipple-root-26"
          />
        </span>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-40 MuiTableCell-body-42"
      >
        <a
          href="/list/edit/test2"
          onClick={[Function]}
        >
          Philipine diving with Eric
        </a>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-40 MuiTableCell-body-42"
      >
        Philipine
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-40 MuiTableCell-body-42"
      >
        2018-03-15
      </td>
    </tr>
    <tr
      aria-checked={false}
      className="MuiTableRow-root-35"
      role="checkbox"
      tabIndex={-1}
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root-40 MuiTableCell-body-42"
      >
        <span
          className="MuiButtonBase-root-17 MuiIconButton-root-57 MuiSwitchBase-root-53 MuiCheckbox-root-48 MuiCheckbox-colorSecondary-52"
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={null}
        >
          <span
            className="MuiIconButton-label-62"
          >
            <svg
              aria-hidden="true"
              className="MuiSvgIcon-root-20"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
              />
            </svg>
            <input
              checked={false}
              className="MuiSwitchBase-input-56"
              onChange={[Function]}
              type="checkbox"
              value="test3"
            />
          </span>
          <span
            className="MuiTouchRipple-root-26"
          />
        </span>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-40 MuiTableCell-body-42"
      >
        <a
          href="/list/edit/test3"
          onClick={[Function]}
        >
          Free diving with sharks
        </a>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-40 MuiTableCell-body-42"
      >
        Cannes
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-40 MuiTableCell-body-42"
      >
        2019-05-25
      </td>
    </tr>
    <tr
      aria-checked={false}
      className="MuiTableRow-root-35"
      role="checkbox"
      tabIndex={-1}
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root-40 MuiTableCell-body-42"
      >
        <span
          className="MuiButtonBase-root-17 MuiIconButton-root-57 MuiSwitchBase-root-53 MuiCheckbox-root-48 MuiCheckbox-colorSecondary-52"
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={null}
        >
          <span
            className="MuiIconButton-label-62"
          >
            <svg
              aria-hidden="true"
              className="MuiSvgIcon-root-20"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
              />
            </svg>
            <input
              checked={false}
              className="MuiSwitchBase-input-56"
              onChange={[Function]}
              type="checkbox"
              value="test4"
            />
          </span>
          <span
            className="MuiTouchRipple-root-26"
          />
        </span>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-40 MuiTableCell-body-42"
      >
        <a
          href="/list/edit/test4"
          onClick={[Function]}
        >
          Blue hold diving, first CAVE DIVE!
        </a>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-40 MuiTableCell-body-42"
      >
        Mexico
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-40 MuiTableCell-body-42"
      >
        2020-03-25
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Dive list: Snapshots tests addNew: should render correctly 1`] = `
<a
  href="/list/add"
  onClick={[Function]}
>
  <button
    aria-label="add"
    className="MuiButtonBase-root-17 MuiButton-root-1 MuiButton-raised-7 MuiButton-fab-12 MuiButton-raisedPrimary-8"
    disabled={false}
    onBlur={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex="0"
    type="button"
  >
    <span
      className="MuiButton-label-2"
    >
      <svg
        aria-hidden="true"
        className="MuiSvgIcon-root-20"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <g>
          <path
            d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
          />
        </g>
      </svg>
    </span>
    <span
      className="MuiTouchRipple-root-26"
    />
  </button>
</a>
`;

exports[`Dive list: Snapshots tests delete button: should render correctly 1`] = `
<button
  aria-label="delete"
  className="MuiButtonBase-root-17 MuiButtonBase-disabled-18 MuiButton-root-1 MuiButton-raised-7 MuiButton-fab-12 MuiButton-disabled-11"
  disabled={true}
  onBlur={[Function]}
  onClick={[MockFunction]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex="-1"
  type="button"
>
  <span
    className="MuiButton-label-2"
  >
    <svg
      aria-hidden="true"
      className="MuiSvgIcon-root-20"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <g>
        <path
          d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
        />
      </g>
    </svg>
  </span>
</button>
`;
